# finance_manager

./: .gitignore  Cargo.toml  LICENSE  README.md
core/: Cargo.toml
core/src/: account.rs  account_id.rs  budget.rs  currency.rs  demo_data.rs  finance_manager.rs  finance_manager_test.rs  fm_controller.rs  lib.rs  transaction.rs  transaction_filter.rs
core/src/managers/: ram_finance_manager.rs  schema.sql  sqlite_finange_manager.rs
fm_core/: Cargo.toml
fm_core/src/: account.rs  account_id.rs  currency.rs  finance_manager.rs  finance_manager_test.rs  fm_controller.rs  lib.rs  ram_finance_manager.rs  schema.sql  sqlite_finange_manager.rs  transaction.rs  transaction_filter.rs
fm_core/src/managers/: mod.rs  ram_finance_manager.rs  schema.sql  sqlite_finange_manager.rs
fm_gui/: Cargo.toml  index.html
fm_gui/src/: currency_input.rs  date_input.rs  filter_component.rs  finance_managers.rs  lib.rs  main.rs  settings.rs  sidebar.rs  table.rs  table_view.rs  timespan_input.rs  utils.rs
fm_gui/src/utils/: currency_input.rs  date_input.rs  filter_component.rs  mod.rs  multiline_text_input.rs  style.rs  table_view.rs  timespan_input.rs  transaction_table.rs
fm_gui/src/utilsa/: currency_input.rs  style.rs  table_view.rs  transaction_table.rs
fm_gui/src/view/: account.rs  asset_accounts_overview.rs  bill.rs  bill_overview.rs  book_checking_account_overview.rs  budget.rs  budget_overview.rs  category.rs  category_overview.rs  comming_soon_view.rs  create_asset_account.rs  create_bill.rs  create_book_checking_account.rs  create_budget.rs  create_category.rs  create_transaction.rs  filter_transactions.rs  mod.rs  settings.rs  show_asset_accounts.rs  transaction.rs  view_account.rs  view_bill.rs  view_budget.rs  view_category.rs  view_transaction.rs
fm_gui/src/view/filter_transactions/: filter_component.rs  mod.rs
fm_gui/src/view/settings/: mod.rs
fm_gui/utils/: Cargo.toml
fm_gui/utils/src/: button.rs  currency_input.rs  date_input.rs  filter_component.rs  lib.rs  table_view.rs  timespan_input.rs  transaction_table.rs
fm_gui/utils/src/date_time/: date_input.rs  date_time_input.rs  mod.rs  time_input.rs  timespan_input.rs
fm_importer/: Cargo.toml
fm_importer/src/: csv_parser.rs  importer_terminal.rs  lib.rs  main.rs  terminal_importer.rs
fm_server/: Cargo.toml
fm_server/src/: client.rs  lib.rs  main.rs  server.rs  server_cli.rs  test.rs
gui/: Cargo.toml  index.html
gui/components/: Cargo.toml
gui/components/src/: button.rs  currency_input.rs  custom_layout.rs  filter_component.rs  key_value_editor.rs  labeled_frame.rs  lib.rs  line_separated_column.rs  scrollable.rs  three_split_row.rs  transaction_table.rs  validation_text_input.rs
gui/components/src/date_time/: date_input.rs  date_span_input.rs  date_time_input.rs  mod.rs  time_input.rs
gui/components/src/scrollable/: advanced.rs  mod.rs  scrollable_widget.rs
gui/components/src/table_view/: inner_table_view.rs  mod.rs
gui/error/: Cargo.toml
gui/error/src/: lib.rs
gui/icons/: Cargo.toml
gui/icons/src/: lib.rs
gui/src/: config.rs  finance_managers.rs  main.rs  settings.rs  sidebar.rs
gui/src/view/: account.rs  asset_accounts_overview.rs  bill.rs  bill_overview.rs  book_checking_account_overview.rs  budget.rs  budget_overview.rs  category.rs  category_overview.rs  create_asset_account.rs  create_bill.rs  create_book_checking_account.rs  create_budget.rs  create_category.rs  create_transaction.rs  filter_transactions.rs  mod.rs  settings.rs  transaction.rs  tutorial.md
gui/src/view/importer/: import.rs  mod.rs  start.rs
gui/style/: Cargo.toml
gui/style/src/: lib.rs
gui/utils/: Cargo.toml
gui/utils/src/: currency_input.rs  filter_component.rs  lib.rs  table_view.rs  transaction_table.rs
gui/utils/src/date_time/: date_span_input.rs  mod.rs  time_input.rs
gui/utils/src/table_view/: inner_table_view.rs  mod.rs
iced-dynamic/: Cargo.toml
importer/: Cargo.toml
importer/src/: csv_parser.rs  lib.rs  main.rs  terminal_importer.rs
server/: Cargo.toml
server/src/: client.rs  server.rs  server_cli.rs
src/: finance.rs  main.rs
src/gui/: create_asset_account.rs  mod.rs  show_asset_accounts.rs  utils.rs  view_account.rs
src/gui/view/: budget_overview.rs  comming_soon_view.rs  create_asset_account.rs  create_budget.rs  create_transaction.rs  mod.rs  show_asset_accounts.rs  view_account.rs
