workspace = { members = [ "fm_core", "fm_gui", "fm_server", "iced-dynamic"] }
[package]
name = "finance_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fm_core = { path = "./fm_core" }
fm_gui = { path = "./fm_gui" }
fm_server = { path = "./fm_server" }