[package]
name = "fm_core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sqlite", "ram", "test"]
sqlite = ["dep:rusqlite", "dep:serde_json", "dep:async-std"]
ram = ["dep:uuid"]
test = ["time/macros"]

[dependencies]
uuid = { version = "1.8.0", features = ["v4"], optional = true }
serde = { version = "1.0.198", features = ["derive"] }
rusqlite = { version = "0.31.0", features = ["bundled"], optional = true }
anyhow = { version = "1.0.82" }
serde_json = { version = "1.0.116", optional = true }
iban_validate = { package = "iban_validate", version = "4.0.1", features = [
    "serde",
] }
bigdecimal = { version = "0.4.5", features = ["serde"] }
async-std = { version = "1.12.0", optional = true }
thiserror = "1.0.63"
time = { version = "0.3.36", features = ["serde", "local-offset"] }
tz-rs = "0.6.14"

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.8.0", features = ["v4", "js"], optional = true }
time = { version = "0.3.36", features = [
    "serde",
    "local-offset",
    "wasm-bindgen",
] }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
