[package]
name = "fm_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["native"]
native = ["fm_core/sqlite"]

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.38"
iced = { version = "0.1.0", path = "../iced-dynamic", package = "iced-dynamic" }  #iced = { git = "https://github.com/iced-rs/iced.git", version = "0.13.0-dev", features = ["advanced"]}
uuid = { version = "1.8.0", features = ["v4"] }
fm_core = { path = "../fm_core", default-features = false, features = ["ram", "wasm"]}
fm_server = { path = "../fm_server", features = ["client"], default-features = false }
async-std = "1.12.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
clap = { version = "4.5.11", features = ["derive"] }
rfd = "0.14.1"

