[package]
name = "fm_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
server = ["dep:axum"]
client = []
full = ["server", "client"]

[dependencies]
axum = { version="0.7.5", optional = true }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"]}
fm_core = { path = "../fm_core" }
serde = "1.0.198"
serde_json = "1.0.116"
