[package]
name = "fm_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["full"]
server = ["dep:axum", "dep:tower", "dep:tower-http", "dep:tracing-subscriber", "dep:tracing"]
client = ["dep:reqwest"]
full = ["server", "client"]

[dependencies]
axum = { version="0.7.5", optional = true }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
fm_core = { path = "../fm_core", features = ["sqlite"], default-features = false }
serde = "1.0.198"
serde_json = "1.0.116"
reqwest = { version = "0.12.4", optional = true }
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.5.2", features = ["trace"], optional = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"], optional = true }
tracing = { version = "0.1.40", optional = true }
anyhow = "1.0.82"
