[package]
name = "fm_gui"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["native"]
native = ["fm_core/sqlite", "dep:serde_json", "dep:smol", "dep:futures-lite"]

[workspace]
members = ["utils"]

[dependencies]
utils.workspace = true
anyhow.workspace = true
uuid = { version = "1.8.0", features = ["v4"] }
fm_server = { path = "../server", features = [
    "client",
], default-features = false }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
clap = { version = "4.5.11", features = ["derive"] }
rfd.workspace = true
serde_json = { version = "1.0.127", optional = true }
dirs = "5.0.1"
iced.workspace = true
fm_core.workspace = true
time.workspace = true
serde = { version = "1.0.217", features = ["derive"] }
smol = { version = "2.0.2", optional = true }
futures-lite = { version = "2.6.0", optional = true }

[workspace.dependencies]
iced = { version = "0.1.0", path = "../iced-dynamic", package = "iced-dynamic" } #iced = { git = "https://github.com/iced-rs/iced.git", version = "0.13.0-dev", features = ["advanced"]}
anyhow = "1.0.82"
fm_core = { path = "../core", default-features = false, features = ["ram"] }
utils = { path = "./utils" }
time = { version = "0.3.36", features = [
    "formatting",
    "local-offset",
    "parsing",
    "wasm-bindgen",
] }
rfd = "0.14.1"
