[package]
name = "fm_gui"
version = "0.1.0"
edition = "2024"

[features]
default = ["native"]
native = ["fm_core/sqlite", "dep:serde_json", "dep:smol", "dep:futures-lite"]

[workspace]
members = ["components", "style"]

[dependencies]
components.workspace = true
style.workspace = true
anyhow.workspace = true
rfd.workspace = true
iced.workspace = true
fm_core.workspace = true
time.workspace = true

fm_server = { path = "../server", features = [
    "client",
], default-features = false }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
clap = { version = "4.5.11", features = ["derive"] }
serde_json = { version = "1.0.127", optional = true }
dirs = "5.0.1"
serde = { version = "1.0.217", features = ["derive"] }
smol = { version = "2.0.2", optional = true }
futures-lite = { version = "2.6.0", optional = true }

[workspace.dependencies]
iced = { version = "0.1.0", path = "../iced-dynamic", package = "iced-dynamic" }
anyhow = "1.0.82"
fm_core = { path = "../core", default-features = false, features = ["ram"] }
style = { path = "./style" }
components = { path = "./components" }
time = { version = "0.3.36", features = [
    "formatting",
    "local-offset",
    "parsing",
    "wasm-bindgen",
] }
rfd = "0.14.1"
