[package]
name = "fm_gui"
version = "0.1.0"
edition = "2024"

[features]
default = ["native"]
native = ["fm_core/sqlite", "dep:serde_json"]

[workspace]
members = ["components", "style", "error", "icons"]

[dependencies]
components.workspace = true
style.workspace = true
anyhow.workspace = true
rfd.workspace = true
iced.workspace = true
fm_core.workspace = true
time.workspace = true
error.workspace = true
icons.workspace = true
iced_aw.workspace = true

fm_server = { path = "../server", features = [
    "client",
], default-features = false }
async-std.workspace = true
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
clap = { version = "4.5.11", features = ["derive"] }
serde_json = { version = "1.0.127", optional = true }
dirs = "5.0.1"
serde = { version = "1.0.217", features = ["derive"] }
itertools = "0.14.0"

[workspace.dependencies]
iced = { version = "0.1.0", path = "../iced-dynamic", package = "iced-dynamic" }
anyhow = "1.0.82"
fm_core = { path = "../core", default-features = false, features = ["ram"] }
style = { path = "./style" }
error = { path = "./error" }
icons = { path = "./icons" }
async-std = "1.12.0"
components = { path = "./components" }
time = { version = "0.3.36", features = [
    "formatting",
    "local-offset",
    "parsing",
    "wasm-bindgen",
] }
rfd = "0.15.4"
iced_aw = { git = "https://github.com/iced-rs/iced_aw.git", rev = "75b4c677d5a2081405577a3e08077303b8a5f57a", features = [
    "drop_down",
    "labeled_frame",
    "custom_layout",
], default-features = false }
