[package]
name = "iced-dynamic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", version = "0.13.0-dev", features = ["advanced", "lazy", "tokio", "svg"]}

[lib]
crate-type = ["dylib"]
