[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
fm_core = { path = "../../core", default-features = false }
iced.workspace = true
time.workspace = true
anyhow.workspace = true
async-std.workspace = true
rfd.workspace = true
uuid = { version = "1.8.0", features = ["v4"] }
